# drain-rs

./: Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
src/: lib.rs  retain.rs
