[package]
name = "drain"
version = "0.0.1"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/linkerd/drain-rs"
description = """
A crate that supports graceful shutdown
"""

[features]
retain = ["tower"]

[dependencies]
futures = { version = "0.3.15", default-features = false }
tokio = { version = "1", features = ["macros", "sync"] }
tower = { version = "0.4.7", default-features = false, optional = true }

[dev-dependencies]
pin-project = "1"
tokio = { version = "1", features = ["time"] }
tokio-test = "0.4"
