[package]
name = "drain"
version = "0.2.1"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/linkerd/drain-rs"
description = """
A crate that supports graceful shutdown
"""

[features]
default = []
retain = ["dep:tower-layer", "dep:tower-service"]

[dependencies]
tokio = { version = "1", features = ["macros", "sync"] }
tower-layer = { version = "0.3.3", default-features = false, optional = true }
tower-service = { version = "0.3.3", default-features = false, optional = true }

[dev-dependencies]
futures = { version = "0.3.15", default-features = false }
pin-project-lite = "0.2"
tokio-test = "0.4"
